examples/test/testpolicy1229.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1229
  namespace: namespace477
spec:
  podSelector:
    matchLabels:
      key26: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value33
      podSelector:
        matchLabels:
          key2: value5
          key43: value22
          key11: value14
